--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
         "build": {
             "dependsOn": ["^build"],
             "inputs": ["src/**", "tsconfig.json"],
-            "outputs": ["lib/**"]
+            "outputs": ["lib/**", "tsconfig.tsbuildinfo"]
         },
         "lint": {
             "dependsOn": ["build"],
@@ -17,8 +17,10 @@
         },
         "dev": {
             "cache": false,
-            "persistent": true,
-            "dependsOn": ["^build"]
+            "persistent": true
+        },
+        "//#lint-versions": {
+            "inputs": ["**/package.json"]
         }
     }
 }
