--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-    "name": "@bobbyfidz/osdk-react-monorepo",
+    "name": "@bobbyfidz/foundry-tools-monorepo",
     "private": true,
+    "scripts": {
+        "fix-versions": "syncpack set-semver-ranges && syncpack fix-mismatches",
+        "lint-versions": "syncpack lint",
+        "upgrade-versions": "syncpack update && syncpack set-semver-ranges && syncpack fix-mismatches"
+    },
     "devDependencies": {
-        "husky": "^9.1.4",
-        "prettier": "^3.3.3",
-        "prettier-plugin-packagejson": "^2.5.1",
-        "prettier-plugin-tailwindcss": "^0.6.6",
-        "pretty-quick": "^4.0.0",
-        "turbo": "2.3.3",
-        "@changesets/cli": "^2.27.10"
+        "husky": "^9.1.7",
+        "lint-staged": "^15.5.2",
+        "prettier": "^3.5.3",
+        "prettier-plugin-packagejson": "^2.5.15",
+        "prettier-plugin-tailwindcss": "^0.6.12",
+        "syncpack": "^13.0.4",
+        "turbo": "2.5.1",
+        "typescript": "~5.8.3"
     },
     "packageManager": "pnpm@9.6.0",
     "engines": {
-        "node": "20.18.2"
+        "node": "24.11.1"
     }
 }
