--- a/packages/osdk-utils/package.json
+++ b/packages/osdk-utils/package.json
@@ -16,7 +16,7 @@
         "lint": "eslint"
     },
     "dependencies": {
-        "@osdk/client": "^2.3.0-beta.2",
+        "@osdk/client": "^2.5.2",
         "@bobbyfidz/panic": "^0.1.0",
         "jose": "^6.0.11"
     },
