--- a/apps/osdk-react-todo-app/package.json
+++ b/apps/osdk-react-todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bobbyfidz/todo-app",
+  "name": "@bobbyfidz/osdk-react-todo-app",
   "private": true,
   "version": "0.0.27",
   "type": "module",
